--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -11,8 +11,12 @@
     <meta property="og:url" content="{{ ogUrl }}">
     <meta property="og:site_name" content="{{ ogSiteName }}">
     <meta property="og:image" content="{{ ogImageSecureUrl }}">
-{% endblock %}
 
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1SC4y43QhRkEtzuHnQ06IsTlQ1hAN1mk&callback=initMap&v=weekly&libraries=marker"
+        defer
+        ></script>
+{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -76,14 +80,14 @@
     <div class="mt-5 flex flex-col gap-5">
         <h2 class="text-primary-red text-xl md:text-3xl">Mes arrêts</h2>
 
+            <div class="flex justify-between flex-wrap">
         {% for checkpoint in roadtrip.checkpoints %}
-            <div class="flex flex-col">
                 <p class="text-secondary-black">{{ checkpoint.name }}</p>
-                <p class="text-secondary-black">{{ checkpoint.googleMapsCoordinates }}</p>
-            </div>
         {% else %}
-            <li>Aucun arrêt disponible.</li>
         {% endfor %}
+            </div>
+        <div id="map" class="h-[50vh] w-full bg-blue-200"></div>
+
     </div>
 
     <div class="mt-5 flex flex-col gap-5">
@@ -104,11 +108,12 @@
             <p class="text-secondary-black">Aucune photo disponible.</p>
         {% endfor %}
     </div>
-
 </div>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
     <script>
+      var checkpoints = {{ roadtrip.checkpoints|map(c => c.googleMapsCoordinates)|json_encode|raw }};
     </script>
+    <script type="module" src="{{ asset('js/map_uglified.js') }}" defer></script>
 {% endblock %}
