Enhance styling and functionality: apply background color in CSS, set minimum zoom level in map, update image paths in profile template, add user deletion route in SecurityController, and improve README with database connection details.

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -8,6 +8,8 @@ html,body {
     font-family: "Plus Jakarta Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    
+    @apply bg-primary-white;
 }
 
 h1, h2, h3, h4, h5, h6, p {
