--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -12,59 +12,63 @@
     <p class="mb-10">Retrouvez vos derniers roadtrips, revivez vos souvenirs, modifiez-les, ou encore supprimez-les :(</p>
 
     {% if lastRoadtrip %}
-    <div class="">
-        <h2 class="text-2xl font-bold mb-4">Votre dernier roadtrip</h2>
-        <div class="relative rounded-md border border-[#E0E0E0] overflow-hidden">
-            <!-- Image de couverture -->
-            <img src="{{ lastRoadtrip.coverImage }}" alt="{{ lastRoadtrip.title }}"
-                class="w-full h-48 sm:h-64 object-cover">
-            <!-- Détails -->
-            <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black to-transparent p-4 text-white">
-                <p class="text-lg text-primary-white font-semibold">{{ lastRoadtrip.title }}</p>
+        <div class="flex flex-col gap-5 rounded-md border border-[#E0E0E0] w-full h-[400px]">
+            <div class="overflow-hidden h-full flex items-end p-2"
+            style="background-image: url('{{ lastRoadtrip.coverImage }}'); background-size: cover; background-position: center;">
+                <div class="flex flex-col px-2 gap-3 text-primary-white">
+                    <h4 class="text-2xl font-bold text-inherit">{{ lastRoadtrip.title }}</h4>
+                    <div class="flex gap-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin"><path d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"/><circle cx="12" cy="10" r="3"/></svg>
+
+                        <p class="text-inherit">{{ begin.arrivalDate|date('d/m/Y') }} - {{ end.departureDate|date('d/m/Y') }}</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex justify-around flex-wrap items-center gap-5 p-2 mb-4 ml-auto">
+                <a class="min-w-36 px-4 py-2 justify-center rounded-full flex gap-2 bg-primary-red text-white outline-2 outline-primary-red hover:text-primary-red hover:outline-primary-red hover:outline hover:bg-transparent transition-all hover:cursor-pointer" href="{{ path('app_show_roadtrip', { id: lastRoadtrip.id }) }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye">
+                        <path d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0" />
+                        <circle cx="12" cy="12" r="3" />
+                    </svg>
+                    Voir les détails
+                </a>
             </div>
         </div>
-        <!-- Bouton -->
-        <div class="mt-4 flex justify-end mb-10">
-            <a href="{{ path('app_show_roadtrip', { id: lastRoadtrip.id }) }}"
-                class="inline-flex items-center px-4 py-2 bg-primary-red text-white text-sm font-medium rounded-lg hover:bg-red-600 transition">
-                Voir les détails
-            </a>
-        </div>
-    </div>
 {% endif %}
 
 
     {% if roadtrips %}
     <div class="flex flex-wrap justify-center gap-10 mt-5 w-full md:justify-between">
         {% for roadtrip in roadtrips %}
-        <div class="flex flex-col gap-5 rounded-md border border-[#E0E0E0] w-full max-w-96 h-[500px]">
-    <div class="h-1/2 overflow-hidden">
-        <img src="{{ roadtrip.coverImage }}" alt="{{ roadtrip.title }}" class="object-cover w-full h-full">
-    </div>
-    <div class="flex flex-col px-2 gap-3">
-        <h4 class="text-2xl font-bold">{{ roadtrip.title }}</h4>
-        <p>{{ begin.arrivalDate|date('d/m/Y') }} - {{ end.departureDate|date('d/m/Y') }}</p>
-    </div>
+        <div class="flex flex-col gap-5 rounded-md border border-[#E0E0E0] w-full max-w-96 h-[400px]">
+            <div class="h-1/2 overflow-hidden">
+                <img src="{{ roadtrip.coverImage }}" alt="{{ roadtrip.title }}" class="object-cover w-full h-full">
+            </div>
+            <div class="flex flex-col px-2 gap-3">
+                <h4 class="text-2xl font-bold">{{ roadtrip.title }}</h4>
+                <p>{{ begin.arrivalDate|date('d/m/Y') }} - {{ end.departureDate|date('d/m/Y') }}</p>
+            </div>
 
-    <div class="flex justify-around flex-wrap items-center gap-5 p-2 mt-auto">
-        <a class="min-w-36 px-4 py-2 justify-center rounded-full flex gap-2 bg-primary-red text-white outline-2 outline-primary-red hover:text-primary-red hover:outline-primary-red hover:outline hover:bg-transparent transition-all hover:cursor-pointer" href="{{ path('app_show_roadtrip', { id: roadtrip.id }) }}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye">
-                <path d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0" />
-                <circle cx="12" cy="12" r="3" />
-            </svg>
-            Voir les détails
-        </a>
+            <div class="flex justify-around flex-wrap items-center gap-5 p-2 mt-auto">
+                <a class="min-w-36 px-4 py-2 justify-center rounded-full flex gap-2 bg-primary-red text-white outline-2 outline-primary-red hover:text-primary-red hover:outline-primary-red hover:outline hover:bg-transparent transition-all hover:cursor-pointer" href="{{ path('app_show_roadtrip', { id: roadtrip.id }) }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye">
+                        <path d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0" />
+                        <circle cx="12" cy="12" r="3" />
+                    </svg>
+                    Voir les détails
+                </a>
 
-        <a class="min-w-36 justify-center px-4 py-2 rounded-full flex gap-2 text-primary-red border-solid border-2 border-primary-red hover:cursor-pointer" href="{{ path('app_edit_roadtrip', { id: roadtrip.id }) }}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil-line">
-                <path d="M12 20h9" />
-                <path d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z" />
-                <path d="m15 5 3 3" />
-            </svg>
-            Modifier
-        </a>
+                <a class="min-w-36 justify-center px-4 py-2 rounded-full flex gap-2 text-primary-red border-solid border-2 border-primary-red hover:cursor-pointer" href="{{ path('app_edit_roadtrip', { id: roadtrip.id }) }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil-line">
+                        <path d="M12 20h9" />
+                        <path d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z" />
+                        <path d="m15 5 3 3" />
+                    </svg>
+                    Modifier
+                </a>
+            </div>
     </div>
-</div>
         {% endfor %}
     </div>
     {% else %}
