Enhance map functionality: add AdvancedMarkerElement for checkpoints, update HTML lang attribute, and improve image viewer styles in profile template

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,6 +8,8 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1SC4y43QhRkEtzuHnQ06IsTlQ1hAN1mk&callback=initMap&v=weekly&libraries=marker"
     defer
     ></script>
+
+    <meta name="description" content="Waw est une plateforme qui vous permet de créer et de partager vos roadtrips. Créez votre journal de voyage, partagez-le avec vos proches et suivez votre roadtrip sur une carte interactive.">
 {% endblock %}
 
 {% block body %}
@@ -32,7 +34,7 @@
   <li class="flex flex-col gap-5 w-auto rounded-md border border-[#E0E0E0] p-4">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/><path d="m15 5 4 4"/></svg>
     <h3 class="font-bold text-xl">Créer votre journal</h3>
-    <p class="text-secondary-black">Faites de votre voyage une expérience inoubliable en créant votre roadtrip personnalisé.</p>
+    <p class="text-[#4C5A66]">Faites de votre voyage une expérience inoubliable en créant votre roadtrip personnalisé.</p>
   </li>
 
   <li class="flex flex-col gap-5 w-auto rounded-md border border-[#E0E0E0] p-4">
