Add about and privacy policy pages, enhance footer links, and update CSS for new font styles

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="mt-auto pt-10 flex flex-col items-center gap-5">
     <div class="flex justify-around w-full">
-        <a href="#" class="text-secondary-black">A propos</a>
-        <a href="#" class="text-secondary-black">Politique de confidentialité</a>
+        <a class="text-secondary-black" href={{path('app_about')}}>A propos</a>
+        <a href={{path('app_privacy_policy')}} class="text-secondary-black">Politique de confidentialité</a>
     </div>
 
     <div class="flex gap-4">
