--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 html,body {
     font-family: "Plus Jakarta Sans", sans-serif;
@@ -18,6 +19,12 @@ h1, h2, h3, h4, h5, h6, p {
 
 h2{
     @apply font-bold
+}
+
+p,a,li {
+    font-family: "Istok Web", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 a {
