--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -14,7 +14,7 @@
     {% if lastRoadtrip %}
         <div class="flex flex-col gap-5 rounded-md border border-[#E0E0E0] w-full h-[400px]">
             <div class="overflow-hidden h-full flex items-end p-2"
-            style="background-image: url('uploads/{{ lastRoadtrip.coverImage }}'); background-size: cover; background-position: center;">
+            style="background-image: url('{{ lastRoadtrip.coverImage }}'); background-size: cover; background-position: center;">
                 <div class="flex flex-col px-2 gap-3 text-primary-white">
                     <h4 class="text-2xl font-bold text-inherit">{{ lastRoadtrip.title }}</h4>
                     <div class="flex gap-2">
